# T-Rex-owner

./: pyproject.toml
src/testing/: __init__.py
src/trex/: main.py
