[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trex"
version = "0.1.0"
description = "T-Rex Multi-Scanner Tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

authors = [
    {name = "T-Rex"}
]

[tool.setuptools.packages.find]
where = ["src"]

# 🔥 This creates the "trex" command
[project.scripts]
trex = "trex.main:main"
